# a-star-exploration

./: .gitlab-ci.yml  Cargo.toml  build  index.html  worker.js
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  build
frontend/src/: app.rs  dom.rs  lib.rs  macros.rs  renderer.rs  start.rs
frontend/www/: index.js  package.json
graph/: Cargo.toml
graph/src/: a_star.rs  graph.rs  grid.rs  lib.rs  node.rs
src/: app.rs  dom.rs  grid.rs  lib.rs  macros.rs  node.rs  pool.rs  renderer.rs  start.rs
www/: package-lock.json
