[package]
name = "a-star-backend"
version = "0.1.0"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
edition = "2018"

[dependencies]
a-star-graph = { path = "../graph" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0.117", features=["derive"] }
serde_json = "1.0.59"
priority-queue = "1.0.2"
rayon = "1.4.1"
