[package]
name = "graph"
version = "0.1.0"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.19.5"
strum_macros = "0.19.4"
priority-queue = "1.0.2"
rayon = "1.4.1"
serde = { version = "1.0.117", features=["derive"] }
